<resources>
    <string name="app_name"></string>
    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_history">History</string>
    <string name="nav_account">Account</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cmd_cong_tru">+/_</string>
    <string name="cmd_0">0</string>
    <string name="cmd_dot">.</string>
    <string name="cmd_bang">=</string>
    <string name="cmd_1">1</string>
    <string name="cmd_2">2</string>
    <string name="cmd_3">3</string>
    <string name="cmd_4">4</string>
    <string name="cmd_5">5</string>
    <string name="cmd_6">6</string>
    <string name="cmd_tru">-</string>
    <string name="cmd_cong">+</string>
    <string name="cmd_7">7</string>
    <string name="cmd_8">8</string>
    <string name="cmd_9">9</string>
    <string name="cmd_nhan">× </string>
    <string name="cmd_c">C</string>
    <string name="cmd_ce">CE</string>
    <string name="cmd_back">BACK</string>
    <string name="cmd_chia">÷</string>
    <string name="width">80dp</string>
    <string name="textsize">20dp</string>
    <string name="cmd_phan_so">1/x</string>
    <string name="cmd_binh_phuong">x^2</string>
    <string name="cmd_can_hai">sqrt(x)</string>
    <string name="cmd_chia_du">%</string>
    <string name="title_calculator">Calculator</string>
    <string name="nav_standard">Standard</string>
    <string name="nav_scientific">Scientific</string>
    <string name="nav_graphing">Graphing</string>
    <string name="nav_programmer">Programmer</string>
    <string name="nav_date_calculation">Date Calculation</string>
    <string name="title_converter">Converter</string>
    <string name="nav_currency">Currency</string>
    <string name="nav_volumn">Volumn</string>
    <string name="nav_length">Length</string>
    <string name="nav_weight_and_mass">Weight And Mass</string>
    <string name="nav_temperature">Temperature</string>
    <string name="nav_energy">Energy</string>
    <string name="nav_area">Area</string>
    <string name="nav_speed">Speed</string>
    <string name="nav_time">Time</string>
    <string name="nav_power">Power</string>
    <string name="nav_data">Data</string>
</resources>