<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:title="@string/title_calculator">
<menu>
    <item android:id="@+id/nav_standard"
        android:title="@string/nav_standard"
        android:icon="@drawable/ic_standard"/>
    <item android:id="@+id/nav_Scientific"
        android:title="@string/nav_scientific"
        android:icon="@drawable/ic_scientific"/>
    <item android:id="@+id/nav_graphing"
        android:title="@string/nav_graphing"
        android:icon="@drawable/ic_graphing"/>
    <item android:id="@+id/nav_programmer"
        android:title="@string/nav_programmer"
        android:icon="@drawable/ic_programming"/>
    <item android:id="@+id/nav_date_calculation"
        android:title="@string/nav_date_calculation"
        android:icon="@drawable/ic_date_calculation"/>
</menu>
</item>
    <item android:title="@string/title_converter">
        <menu>
            <item android:id="@+id/nav_currency"
            android:title="@string/nav_currency"
            android:icon="@drawable/ic_currency"/>

        <item android:id="@+id/nav_volumn"
            android:title="@string/nav_volumn"
            android:icon="@drawable/ic_volumn"/>
            <item android:id="@+id/nav_length"
                android:title="@string/nav_length"
                android:icon="@drawable/ic_length"/>
            <item android:id="@+id/nav_weight_and_mass"
                android:title="@string/nav_weight_and_mass"
                android:icon="@drawable/ic_weight_and_mass"/>
            <item android:id="@+id/nav_temperature"
                android:title="@string/nav_temperature"
                android:icon="@drawable/ic_temperature"/>
            <item android:id="@+id/nav_energy"
                android:title="@string/nav_energy"
                android:icon="@drawable/ic_energy"/>
            <item android:id="@+id/nav_area"
                android:title="@string/nav_area"
                android:icon="@drawable/ic_area"/>
            <item android:id="@+id/nav_speed"
                android:title="@string/nav_speed"
                android:icon="@drawable/ic_speed"/>
            <item android:id="@+id/nav_time"
                android:title="@string/nav_time"
                android:icon="@drawable/ic_time"/>
            <item android:id="@+id/nav_power"
                android:title="@string/nav_power"
                android:icon="@drawable/ic_power"/>
            <item android:id="@+id/nav_data"
                android:title="@string/nav_data"
                android:icon="@drawable/ic_data"/>
        </menu>
    </item>

</menu>